--- a/public/index.html
+++ b/public/index.html
@@ -28,14 +28,14 @@
 
 <!-- ======== @Region: body ======== -->
 <div id="content" class="py-0">
-  <div class="container-fluid px-3 py-5 px-lg-4 py-lg-6 bg-grey">
+  <div class="container-fluid px-3 py-5 px-lg-4 py-lg-6" style="background-color: #E7E4DD; height: auto;">
     <div id="app"></div>
   </div>
 </div>
 
 <body class="page header-fixed-left-lg page-demo-travel-blog-post navbar-layout-default">
-  <div class="container-fluid px-3 py-5 px-lg-4 py-lg-6 bg-grey">
-  </div>
+  <!-- <div class="container-fluid px-3 py-5 px-lg-4 py-lg-6"> -->
+  <!-- </div> -->
 </body>
 
 </html>
